# p1p2mqtt-esp32c6

./: .gitignore  CMakeLists.txt  README.md  build.sh  diagram.json  partitions.csv  sdkconfig.defaults  wokwi.toml
components/p1p2_bus/: CMakeLists.txt  p1p2_adc.c  p1p2_bus.c  p1p2_mcpwm_rx.c  p1p2_mcpwm_tx.c
components/p1p2_bus/include/: p1p2_bus.h  p1p2_bus_config.h  p1p2_bus_types.h
components/p1p2_cli/: CMakeLists.txt  p1p2_cli.c
components/p1p2_matter/: CMakeLists.txt  p1p2_matter_custom.c  p1p2_matter_device.c  p1p2_matter_fan.c  p1p2_matter_sensors.c  p1p2_matter_thermostat.c
components/p1p2_matter/include/: p1p2_matter.h  p1p2_matter_clusters.h
components/p1p2_network/: CMakeLists.txt  p1p2_config_store.c  p1p2_ota.c  p1p2_thread.c
components/p1p2_network/include/: p1p2_network.h
components/p1p2_protocol/: CMakeLists.txt  p1p2_fseries_control.c  p1p2_fseries_decode.c  p1p2_param_conversion.c
components/p1p2_protocol/include/: p1p2_fseries.h  p1p2_param_tables.h  p1p2_protocol.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c
test/: CMakeLists.txt  wokwi.toml
test/main/: CMakeLists.txt  test_main.c
